tests/examples/good/misc/good017.lat
int main() {
    int[] arr = new int[10];
    arr.length;
    printInt(arr.length);
    return 0;
}
