tests/examples/bad/bad010.lat
int main () {
    f().length--;
    return 0;
}


int[] f() {int[] arr = new int[5]; return arr;}